Fix SEO problem with footer links to close each other on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -109,6 +109,14 @@
     margin-left: 0;
 }
 
+@include media-query($on-palm) {
+  .social-media-list {
+    li {
+      height: 48px;
+    }
+  }
+}
+
 .footer-col-wrapper {
     font-size: 15px;
     color: $grey-color;
